updated responsiveness of card

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
   <!--Trending-->
   <section id="pricing">
     <div class="row">
-        <div class="col-12 col-lg-4 col-md-6 col-sm-6">
-          <div class="card" style="width: 27vw;">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+          <div class="card" style="width: 25rem;">
             <img src="images/card_pic1.png" class="card-img-top" alt="...">
             <div class="card-body text-dark">
               <h5 class="card-title fw-bold">Card title</h5>
@@ -81,8 +81,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-6">
-          <div class="card" style="width: 27vw;">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+          <div class="card" style="width: 25rem;">
             <img src="images/card_pic2.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
               <h5 class="card-title fw-bold">Card title</h5>
@@ -91,8 +91,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-6">
-          <div class="card" style="width: 27vw;">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+          <div class="card" style="width: 25rem;">
             <img src="images/landing-image.PNG" class="card-img-top" alt="...">
             <div class="card-body text-dark">
               <h5 class="card-title fw-bold">Card title</h5>
@@ -101,8 +101,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-6">
-          <div class="card" style="width: 27vw;">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+          <div class="card" style="width: 25rem;">
             <img src="images/card_pic4.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
               <h5 class="card-title fw-bold">Card title</h5>
@@ -111,8 +111,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-6">
-          <div class="card" style="width: 27vw;">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+          <div class="card" style="width: 25rem;">
             <img src="images/card_pic5.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
               <h5 class="card-title fw-bold">Card title</h5>
@@ -121,8 +121,8 @@
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-6">
-          <div class="card" style="width: 27vw;">
+        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
+          <div class="card" style="width: 25rem;">
             <img src="images/card_pic6.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
               <h5 class="card-title fw-bold">Card title</h5>
