--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 
 <body>
   <section id="title">
-
-
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
@@ -56,12 +54,12 @@
   </nav>
         
 
-    <!-- Title -->
+  <!-- Title -->
     <div class="title container-lg px-0">
       <img class="landing-image" src="images/landing-image.PNG">
       <div class="text-box">
-        <h1 class="niketitle1">100% ORGANIC</h1>
-        <p class="niketitle2">Lorem ipsum dolor sit amet, consectetur adipiscing  incididunt ut labore et dolore magna aliqua.</p>
+        <h1 class="landing-title1">100% ORGANIC</h1>
+        <p class="landing-title2">Lorem ipsum dolor sit amet, consectetur adipiscing  incididunt ut labore et dolore</p>
         <button class="landing-btn">Click here</button>
       </div>
     </div>
@@ -71,63 +69,63 @@
   <!--Trending-->
   <section id="pricing">
     <div class="row">
-        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-          <div class="card" style="width: 25rem;">
+        <div class="col-6 col-lg-4">
+          <div class="card card-main">
             <img src="images/card_pic1.png" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title fw-bold">Card title</h5>
+              <h5 class="card-title ">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success" style="--bs-btn-font-size: 1.75vw;">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-          <div class="card" style="width: 25rem;">
+        <div class="col-6 col-lg-4">
+          <div class="card card-main">
             <img src="images/card_pic2.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title fw-bold">Card title</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success" style="--bs-btn-font-size: 1.75vw;">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-          <div class="card" style="width: 25rem;">
+        <div class="col-6 col-lg-4">
+          <div class="card card-main">
             <img src="images/landing-image.PNG" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title fw-bold">Card title</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success" style="--bs-btn-font-size: 1.75vw;">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-          <div class="card" style="width: 25rem;">
+        <div class="col-6 col-lg-4">
+          <div class="card card-main">
             <img src="images/card_pic4.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title fw-bold">Card title</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success" style="--bs-btn-font-size: 1.75vw;">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-          <div class="card" style="width: 25rem;">
+        <div class="col-6 col-lg-4">
+          <div class="card card-main">
             <img src="images/card_pic5.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title fw-bold">Card title</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success" style="--bs-btn-font-size: 1.75vw;">Go somewhere</a>
             </div>
           </div>
         </div>
-        <div class="col-12 col-lg-4 col-md-6 col-sm-12">
-          <div class="card" style="width: 25rem;">
+        <div class="col-6 col-lg-4">
+          <div class="card card-main">
             <img src="images/card_pic6.jpg" class="card-img-top" alt="...">
             <div class="card-body text-dark">
-              <h5 class="card-title fw-bold">Card title</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-success">Go somewhere</a>
+              <a href="#" class="btn btn-success" style="--bs-btn-font-size: 1.75vw;">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -137,16 +135,15 @@
   <section id="essential">
     <img class="banner-img" src="images/bannner-img.jpeg">
     <div>
-      <h1 class="banner-title1">100% ORGANIC</h1>
-      <p class="banner-title2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et .</p>
+      <h1 class="banner-title1">FRESH & NON-GMO PRODUCtS</h1>
+      <p class="banner-title2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt</p>
     </div>
   </section>
 
     <!--Trending-->
     <section id="pricing">
-  
       <div class="row">
-          <div class="col-12 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-6 col-lg-4">
             <div class="card text-bg-light mb-3">
               <div class="card-header"><i class="fa-sharp fa-solid fa-leaf fa-xl" style="color: #1dc11a;"></i></div>
               <div class="card-body">
@@ -155,7 +152,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-6 col-lg-4">
             <div class="card text-bg-light mb-3">
               <div class="card-header"><img src="images/hello.png"></div>
               <div class="card-body">
@@ -164,7 +161,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-6 col-lg-4">
             <div class="card text-bg-light mb-3">
               <div class="card-header"><img src="images/circular-alarm-clock-tool.png"></div>
               <div class="card-body">
@@ -173,7 +170,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-6 col-lg-4">
             <div class="card text-bg-light mb-3">
               <div class="card-header"><img src="images/location.png"></div>
               <div class="card-body">
@@ -182,7 +179,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-6 col-lg-4">
             <div class="card text-bg-light mb-3">
               <div class="card-header"><img src="images/hello2.png"></div>
               <div class="card-body">
@@ -191,7 +188,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-4 col-md-6 col-sm-6">
+          <div class="col-6 col-lg-4">
             <div class="card text-bg-light mb-3">
               <div class="card-header"><img src="images/mansory.png"></div>
               <div class="card-body">
@@ -211,19 +208,19 @@
     <img class="footer-img" src="images/footer-img.png">
     <div class="footer-body">
       <div class="row">
-        <div class="col-12 col-lg-3 col-sm-6">
+        <div class="col-6 col-lg-3 col-sm-6">
           <h5>Lorem ipsum dolor sit</h5>
           <p class="footer-content">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Sed do eiusmod tempor</p>
         </div>
-        <div class="col-12 col-lg-3 col-sm-6">
+        <div class="col-6 col-lg-3 col-sm-6">
           <h5>Lorem ipsum dolor sit</h5>
           <p class="footer-content" style="color: yellow;">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Sed do eiusmod tempor</p>
         </div>
-        <div class="col-12 col-lg-3 col-sm-6">
+        <div class="col-6 col-lg-3 col-sm-6">
           <h5>Lorem ipsum dolor sit</h5>
           <p class="footer-content" style="color: yellow;">Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.<br> Sed do eiusmod tempor</p>
         </div>
-        <div class="col-12 col-lg-3 col-sm-6">
+        <div class="col-6 col-lg-3 col-sm-6">
           <h5>Lorem ipsum dolor sit</h5>
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</p>
           <p> <input type="text" placeholder="Search.." name="search"><button type="submit"><i class="fa fa-search"></i></button></p>  
@@ -247,14 +244,11 @@
             <p class="footer-cr">©Copyright Sanskar</p>
       </div>
     </div>
-    
-
-
   </footer>
 
   <!-- script -->
-  <script src="https://kit.fontawesome.com/098d15a16d.js" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+    <script src="https://kit.fontawesome.com/098d15a16d.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script> 
   </body>
 </html>
